logs/sopel-modules.habitica.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enchant'...
Listing './lib/python3.5/site-packages/enchant/checker'...
Listing './lib/python3.5/site-packages/enchant/tokenize'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/praw'...
Listing './lib/python3.5/site-packages/praw/models'...
Listing './lib/python3.5/site-packages/praw/models/list'...
Listing './lib/python3.5/site-packages/praw/models/listing'...
Listing './lib/python3.5/site-packages/praw/models/listing/mixins'...
Listing './lib/python3.5/site-packages/praw/models/reddit'...
Listing './lib/python3.5/site-packages/praw/models/reddit/mixins'...
Listing './lib/python3.5/site-packages/praw-5.3.0.dist-info'...
Listing './lib/python3.5/site-packages/prawcore'...
Listing './lib/python3.5/site-packages/prawcore-0.13.0.dist-info'...
Listing './lib/python3.5/site-packages/pyenchant-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pygeoip'...
Listing './lib/python3.5/site-packages/pygeoip-0.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sopel'...
Listing './lib/python3.5/site-packages/sopel/config'...
Listing './lib/python3.5/site-packages/sopel/modules'...
Listing './lib/python3.5/site-packages/sopel/tools'...
Listing './lib/python3.5/site-packages/sopel-6.5.1.egg-info'...
Listing './lib/python3.5/site-packages/sopel_modules'...
Listing './lib/python3.5/site-packages/sopel_modules/habitica'...
Compiling './lib/python3.5/site-packages/sopel_modules/habitica/common.py'...
***   File "./lib/python3.5/site-packages/sopel_modules/habitica/common.py", line 25
    uuid_regex = re.compile(ur'[a-f\d]{8}-[a-f\d]{4}-[a-f\d]{4}-[a-f\d]{4}-[a-f\d]{12}')
                                                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sopel_modules.habitica-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/update_checker-0.16.dist-info'...
Listing './lib/python3.5/site-packages/xmltodict-0.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
